@@ -7,25 +7,20 @@ import java.util.*;
 import org.frankframework.insights.branch.Branch;
 import org.frankframework.insights.branch.BranchService;
 import org.frankframework.insights.common.configuration.GitHubProperties;
+import org.frankframework.insights.common.entityconnection.branchcommit.BranchCommit;
 import org.frankframework.insights.common.entityconnection.branchcommit.BranchCommitRepository;
 import org.frankframework.insights.common.mapper.Mapper;
-import org.frankframework.insights.common.mapper.MappingException;
 import org.frankframework.insights.github.GitHubClient;
-import org.frankframework.insights.github.GitHubClientException;
 import org.frankframework.insights.github.GitHubRepositoryStatisticsDTO;
 import org.frankframework.insights.github.GitHubRepositoryStatisticsService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
+import org.mockito.*;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
 public class CommitServiceTest {
-
-    @Mock
-    private GitHubProperties gitHubProperties;
 
     @Mock
     private GitHubRepositoryStatisticsService gitHubRepositoryStatisticsService;
@@ -34,7 +29,7 @@ public class CommitServiceTest {
     private GitHubClient gitHubClient;
 
     @Mock
-    private Mapper commitMapper;
+    private Mapper mapper;
 
     @Mock
     private BranchCommitRepository branchCommitRepository;
@@ -42,65 +37,128 @@ public class CommitServiceTest {
     @Mock
     private BranchService branchService;
 
+    @Mock
+    private GitHubProperties gitHubProperties;
+
+    @Mock
+    private CommitRepository commitRepository;
+
     @InjectMocks
     private CommitService commitService;
 
     private Branch mockBranch;
     private CommitDTO mockCommitDTO;
     private Commit mockCommit;
-    private GitHubRepositoryStatisticsDTO mockGitHubRepositoryStatisticsDTO;
+    private GitHubRepositoryStatisticsDTO mockStatsDTO;
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         mockBranch = new Branch();
+        mockBranch.setId(UUID.randomUUID().toString());
         mockBranch.setName("master");
-
-        mockCommit = new Commit();
-        mockCommit.setSha("sha123");
 
         mockCommitDTO = new CommitDTO();
         mockCommitDTO.sha = "sha123";
 
-        mockGitHubRepositoryStatisticsDTO = mock(GitHubRepositoryStatisticsDTO.class);
+        mockCommit = new Commit();
+        mockCommit.setSha("sha123");
+
+        mockStatsDTO = mock(GitHubRepositoryStatisticsDTO.class);
+
         when(gitHubRepositoryStatisticsService.getGitHubRepositoryStatisticsDTO())
-                .thenReturn(mockGitHubRepositoryStatisticsDTO);
+                .thenReturn(mockStatsDTO);
     }
 
     @Test
-    public void should_InjectCommitsForBranch_when_DatabaseIsNotFilledYet()
-            throws GitHubClientException, CommitInjectionException, MappingException {
-        when(mockGitHubRepositoryStatisticsDTO.getGitHubCommitCount(eq(Collections.emptyList())))
-                .thenReturn(10);
-        when(branchCommitRepository.count()).thenReturn(0L);
+    void should_InjectNewCommits_When_DBCountDiffersFromGitHub() throws Exception {
+        Map<String, Integer> githubCounts = Map.of("master", 10);
+
+        when(mockStatsDTO.getGitHubCommitsCount(anyList())).thenReturn(githubCounts);
         when(branchService.getAllBranches()).thenReturn(List.of(mockBranch));
-        when(gitHubClient.getBranchCommits(mockBranch.getName())).thenReturn(Set.of(mockCommitDTO));
-        when(commitMapper.toEntity(any(), any())).thenReturn(Set.of(mockCommit));
+        when(branchCommitRepository.countBranchCommitByBranch_Name("master")).thenReturn(0);
+
+        when(gitHubClient.getBranchCommits("master")).thenReturn(Set.of(mockCommitDTO));
+        when(mapper.toEntity(anySet(), eq(Commit.class))).thenReturn(Set.of(mockCommit));
+        when(branchCommitRepository.findAllByBranch_Id(mockBranch.getId())).thenReturn(Set.of());
 
         commitService.injectBranchCommits();
 
-        verify(branchService, times(1)).saveBranches(anySet());
+        ArgumentCaptor<Collection<BranchCommit>> captor = ArgumentCaptor.forClass(Collection.class);
+        verify(branchCommitRepository).saveAll(captor.capture());
+        Collection<BranchCommit> saved = captor.getValue();
+
+        assertEquals(1, saved.size());
+        BranchCommit bc = saved.iterator().next();
+        assertEquals(mockBranch.getId(), bc.getBranch().getId());
+        assertEquals("sha123", bc.getCommit().getSha());
     }
 
     @Test
-    public void should_NotInjectCommitsForBranch_when_DatabaseIsAlreadyFilled() throws CommitInjectionException {
-        when(mockGitHubRepositoryStatisticsDTO.getGitHubCommitCount(eq(Collections.emptyList())))
-                .thenReturn(10);
-        when(branchCommitRepository.count()).thenReturn(10L);
+    void should_NotInject_When_DBAndGitHubCountsMatch() {
+        Map<String, Integer> githubCounts = Map.of("master", 10);
+
+        when(mockStatsDTO.getGitHubCommitsCount(anyList())).thenReturn(githubCounts);
+        when(branchService.getAllBranches()).thenReturn(List.of(mockBranch));
+        when(branchCommitRepository.countBranchCommitByBranch_Name("master")).thenReturn(10);
 
         commitService.injectBranchCommits();
 
-        verify(branchService, times(0)).saveBranches(anySet());
+        verify(branchCommitRepository, never()).saveAll(any());
     }
 
     @Test
-    public void should_ThrowCommitInjectionException_when_ErrorOccurs() throws GitHubClientException {
-        when(mockGitHubRepositoryStatisticsDTO.getGitHubCommitCount(eq(Collections.emptyList())))
-                .thenReturn(10);
-        when(branchCommitRepository.count()).thenReturn(0L);
-        when(branchService.getAllBranches()).thenReturn(List.of(mockBranch));
-        when(gitHubClient.getBranchCommits(mockBranch.getName()))
-                .thenThrow(new GitHubClientException("Error fetching commits", null));
+    void should_HandleMultipleBranches_WithMixedCommitCounts() throws Exception {
+        Branch mockBranch2 = new Branch();
+        mockBranch2.setId(UUID.randomUUID().toString());
+        mockBranch2.setName("dev");
 
-        assertThrows(CommitInjectionException.class, () -> commitService.injectBranchCommits());
+        CommitDTO dto2 = new CommitDTO();
+        dto2.sha = "sha456";
+
+        Commit commit2 = new Commit();
+        commit2.setSha("sha456");
+
+        Map<String, Integer> githubCounts = Map.of("master", 10, "dev", 5);
+
+        when(mockStatsDTO.getGitHubCommitsCount(anyList())).thenReturn(githubCounts);
+        when(branchService.getAllBranches()).thenReturn(List.of(mockBranch, mockBranch2));
+
+        when(branchCommitRepository.countBranchCommitByBranch_Name("master")).thenReturn(10);
+        when(branchCommitRepository.countBranchCommitByBranch_Name("dev")).thenReturn(3);
+
+        when(gitHubClient.getBranchCommits("dev")).thenReturn(Set.of(dto2));
+        when(mapper.toEntity(anySet(), eq(Commit.class))).thenReturn(Set.of(commit2));
+        when(branchCommitRepository.findAllByBranch_Id(mockBranch2.getId())).thenReturn(Set.of());
+
+        commitService.injectBranchCommits();
+
+        verify(branchCommitRepository, times(1)).saveAll(any());
+    }
+
+    @Test
+    void should_SkipSaving_When_NoNewCommitsFound() throws Exception {
+        when(mockStatsDTO.getGitHubCommitsCount(anyList())).thenReturn(Map.of("master", 5));
+        when(branchService.getAllBranches()).thenReturn(List.of(mockBranch));
+        when(branchCommitRepository.countBranchCommitByBranch_Name("master")).thenReturn(3);
+        when(gitHubClient.getBranchCommits("master")).thenReturn(Set.of(mockCommitDTO));
+        when(mapper.toEntity(anySet(), eq(Commit.class))).thenReturn(Set.of(mockCommit));
+
+        BranchCommit existing = new BranchCommit(mockBranch, mockCommit);
+        when(branchCommitRepository.findAllByBranch_Id(mockBranch.getId())).thenReturn(Set.of(existing));
+
+        commitService.injectBranchCommits();
+
+        verify(branchCommitRepository, never()).saveAll(any());
+    }
+
+    @Test
+    void should_HandleException_When_GettingCommitsFails() throws Exception {
+        when(mockStatsDTO.getGitHubCommitsCount(anyList())).thenReturn(Map.of("master", 7));
+        when(branchService.getAllBranches()).thenReturn(List.of(mockBranch));
+        when(branchCommitRepository.countBranchCommitByBranch_Name("master")).thenReturn(3);
+        when(gitHubClient.getBranchCommits("master")).thenThrow(new RuntimeException("GitHub error"));
+
+        assertDoesNotThrow(() -> commitService.injectBranchCommits());
+        verify(branchCommitRepository, never()).saveAll(any());
     }
 }
